--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.15.2",
+    "bootstrap": "^5.3.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "react-stars": "^2.2.5",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.0.7",
     "web-vitals": "^2.1.4"
   },
