--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-stars": "^2.2.5",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.7",
+    "toastify-js": "^1.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
