--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
     "react-stars": "^2.2.5",
+    "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.7",
     "toastify-js": "^1.12.0",
