--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-geocode": "^1.0.0-alpha.1",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
