--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "material-react-table": "^2.13.0",
+    "moment": "^2.30.1",
     "primereact": "^10.6.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
